--- a/ticho-trace-client/pom.xml
+++ b/ticho-trace-client/pom.xml
@@ -8,11 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>ticho-trace-client</artifactId>
-
-    <name>ticho-log-client</name>
-    <url>http://www.example.com</url>
 
 
     <dependencies>
@@ -23,8 +19,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.ticho.boot</groupId>
-            <artifactId>ticho-starter-http</artifactId>
+            <groupId>top.ticho.log</groupId>
+            <artifactId>ticho-trace-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
