--- a/ticho-trace-client/pom.xml
+++ b/ticho-trace-client/pom.xml
@@ -24,6 +24,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>top.ticho.log</groupId>
+            <artifactId>ticho-trace-spring</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
