日志收集到es

--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,13 @@
     <groupId>top.ticho.log</groupId>
     <artifactId>ticho-trace</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
         <module>ticho-trace-server</module>
         <module>ticho-trace-client</module>
         <module>ticho-trace-core</module>
         <module>ticho-trace-spring</module>
+        <module>ticho-trace-common</module>
     </modules>
 
     <dependencyManagement>
