--- a/ticho-trace-core/pom.xml
+++ b/ticho-trace-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>top.ticho.log</groupId>
         <artifactId>ticho-trace</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ticho-trace-core</artifactId>
@@ -38,8 +38,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>top.ticho.log</groupId>
+            <artifactId>ticho-trace-common</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
