链路收集数据，时间问题优化

--- a/ticho-trace-server/src/main/resources/application.yaml
+++ b/ticho-trace-server/src/main/resources/application.yaml
@@ -10,3 +10,4 @@ easy-es:
   address : @es.host@ # es的连接地址,必须含端口 若为集群,则可以用逗号隔开 例如:127.0.0.1:9200,127.0.0.2:9200
   username: @es.username@ #若无 则可省略此行配置
   password: @es.password@ #若无 则可省略此行配置
+  banner: false
