--- a/ticho-trace-feign/pom.xml
+++ b/ticho-trace-feign/pom.xml
@@ -3,22 +3,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ticho-trace</artifactId>
         <groupId>top.ticho.trace</groupId>
+        <artifactId>ticho-trace</artifactId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>ticho-trace-common</artifactId>
+    <artifactId>ticho-trace-feign</artifactId>
+    <version>1.0.0</version>
 
 
     <dependencies>
-
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>top.ticho.trace</groupId>
+            <artifactId>ticho-trace-core</artifactId>
+            <version>1.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
