网关过滤器优化

--- a/ticho-trace-common/pom.xml
+++ b/ticho-trace-common/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
