--- a/ticho-trace-gateway/pom.xml
+++ b/ticho-trace-gateway/pom.xml
@@ -8,7 +8,6 @@
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>top.ticho.trace.gateway</groupId>
     <artifactId>ticho-trace-gateway</artifactId>
     <version>1.0.0</version>
 
@@ -25,6 +24,12 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
