--- a/ticho-trace-core/pom.xml
+++ b/ticho-trace-core/pom.xml
@@ -38,6 +38,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.ibeetl</groupId>
+            <artifactId>beetl</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>top.ticho.trace</groupId>
             <artifactId>ticho-trace-common</artifactId>
             <version>1.0.0</version>
