--- a/ticho-trace-server/src/main/resources/application.yaml
+++ b/ticho-trace-server/src/main/resources/application.yaml
@@ -6,8 +6,15 @@ spring:
     active: @spring.active@
 
 easy-es:
-  enable: true #默认为true,若为false则认为不启用本框架
-  address : @es.host@ # es的连接地址,必须含端口 若为集群,则可以用逗号隔开 例如:127.0.0.1:9200,127.0.0.2:9200
-  username: @es.username@ #若无 则可省略此行配置
-  password: @es.password@ #若无 则可省略此行配置
+  #默认为true,若为false则认为不启用本框架
+  enable: true
+  # es的连接地址,必须含端口 若为集群,则可以用逗号隔开 例如:127.0.0.1:9200,127.0.0.2:9200
+  address : @es.host@
+  username: @es.username@
+  password: @es.password@
   banner: false
+
+jasypt:
+  encryptor:
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
+    algorithm: PBEWithMD5AndTripleDES
