--- a/ticho-trace-client-gateway/pom.xml
+++ b/ticho-trace-client-gateway/pom.xml
@@ -2,30 +2,21 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <groupId>top.ticho.trace</groupId>
-        <artifactId>ticho-trace</artifactId>
-        <version>1.0.0</version>
-    </parent>
+    <groupId>top.ticho.trace</groupId>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>ticho-trace-client</artifactId>
-
+    <artifactId>ticho-trace-client-gateway</artifactId>
+    <version>1.0.0</version>
 
     <dependencies>
 
         <dependency>
             <groupId>com.ticho.boot</groupId>
-            <artifactId>ticho-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.ticho.boot</groupId>
-            <artifactId>ticho-starter-swagger</artifactId>
+            <artifactId>ticho-starter-gateway</artifactId>
         </dependency>
 
         <dependency>
             <groupId>top.ticho.trace</groupId>
-            <artifactId>ticho-trace-spring</artifactId>
+            <artifactId>ticho-trace-gateway</artifactId>
             <version>1.0.0</version>
         </dependency>
 
