--- a/ticho-trace-client2/src/main/resources/application.yaml
+++ b/ticho-trace-client2/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
-    name: ticho-trace-client
-
+    name: ticho-trace-client2
+    
 ticho:
   swagger:
     enable: true
