--- a/ticho-trace-client-gateway/src/main/resources/application.yaml
+++ b/ticho-trace-client-gateway/src/main/resources/application.yaml
@@ -1,18 +1,18 @@
 server:
-  port: 9090
+  port: 8085
 
 spring:
   cloud:
     gateway:
       routes:
         - id: ticho-trace-client
-          uri: lb://ticho-trace-client
+          uri: http://localhost:8080
           predicates:
             - Path=/client/**
           filters:
             - StripPrefix= 1
         - id: ticho-trace-client2
-          uri: lb://ticho-trace-client2
+          uri: http://localhost:8081
           predicates:
             - Path=/client2/**
           filters:
