--- a/ticho-trace-client2/pom.xml
+++ b/ticho-trace-client2/pom.xml
@@ -20,8 +20,19 @@
         </dependency>
 
         <dependency>
+            <groupId>com.ticho.boot</groupId>
+            <artifactId>ticho-starter-http</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>top.ticho.trace</groupId>
             <artifactId>ticho-trace-spring</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>top.ticho.trace</groupId>
+            <artifactId>ticho-trace-feign</artifactId>
             <version>1.0.0</version>
         </dependency>
 
