es超时时间和连接时间配置

--- a/ticho-trace-server/src/main/resources/application.yaml
+++ b/ticho-trace-server/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ easy-es:
   username: @es.username@
   password: @es.password@
   banner: false
+  connect-timeout: 5000
+  socket-timeout: 60000
 
 jasypt:
   encryptor:
