命名修改、使用disruptor并发框架处理日志

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,14 @@
                 <version>3.14.1.RELEASE</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
+            <dependency>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>3.4.4</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
