--- a/ticho-trace-core/pom.xml
+++ b/ticho-trace-core/pom.xml
@@ -48,5 +48,12 @@
             <version>1.0.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+        </dependency>
+
+
     </dependencies>
 </project>
