--- a/ticho-trace-client/src/main/resources/application.yaml
+++ b/ticho-trace-client/src/main/resources/application.yaml
@@ -12,4 +12,7 @@ ticho:
     enable: true
     url: http://127.0.0.1:8000/trace/collect
     logUrl: http://127.0.0.1:8000/log/collect
+    order: -1000
+  log:
     print: true
+    order: -100
