--- a/ticho-trace-okhttp/pom.xml
+++ b/ticho-trace-okhttp/pom.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>com.ticho.trace</groupId>
+        <artifactId>ticho-trace</artifactId>
+        <version>1.0.0</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>ticho-trace-okhttp</artifactId>
+    <version>1.0.0</version>
 
-  <groupId>com.ticho.trace</groupId>
-  <artifactId>ticho-trace-okhttp</artifactId>
-  <version>1.0.0</version>
+    <dependencies>
 
-  <name>ticho-trace-okhttp</name>
+        <dependency>
+            <groupId>com.ticho.trace</groupId>
+            <artifactId>ticho-trace-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
-  <dependencies>
-
-      <dependency>
-          <groupId>com.ticho.trace</groupId>
-          <artifactId>ticho-trace-core</artifactId>
-          <version>1.0.0</version>
-      </dependency>
-
-  </dependencies>
+    </dependencies>
 
 </project>
