--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.ticho.trace</groupId>
     <artifactId>ticho-trace</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>ticho-trace-server</module>
         <module>ticho-trace-core</module>
