--- a/ticho-trace-client-gateway/pom.xml
+++ b/ticho-trace-client-gateway/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.ticho.trace</groupId>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ticho-trace-client-gateway</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
 
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.ticho.trace</groupId>
             <artifactId>ticho-trace-gateway</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
