--- a/ticho-trace-client/pom.xml
+++ b/ticho-trace-client/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.ticho.trace</groupId>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ticho-trace-client</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
 
     <dependencies>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>com.ticho.trace</groupId>
             <artifactId>ticho-trace-spring</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
