--- a/ticho-trace-client2/pom.xml
+++ b/ticho-trace-client2/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.ticho.trace</groupId>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ticho-trace-client2</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
 
@@ -32,13 +32,13 @@
         <dependency>
             <groupId>com.ticho.trace</groupId>
             <artifactId>ticho-trace-spring</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>com.ticho.trace</groupId>
             <artifactId>ticho-trace-feign</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
