--- a/ticho-trace-core/pom.xml
+++ b/ticho-trace-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.ticho.trace</groupId>
         <artifactId>ticho-trace</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ticho-trace-core</artifactId>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.ticho.trace</groupId>
             <artifactId>ticho-trace-common</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
