--- a/ticho-trace-feign/pom.xml
+++ b/ticho-trace-feign/pom.xml
@@ -5,18 +5,18 @@
     <parent>
         <groupId>com.ticho.trace</groupId>
         <artifactId>ticho-trace</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ticho-trace-feign</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
 
     <dependencies>
         <dependency>
             <groupId>com.ticho.trace</groupId>
             <artifactId>ticho-trace-core</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
