--- a/ticho-trace-core/pom.xml
+++ b/ticho-trace-core/pom.xml
@@ -45,6 +45,7 @@
         <dependency>
             <groupId>com.ticho.trace</groupId>
             <artifactId>ticho-trace-common</artifactId>
+            <optional>true</optional>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
