--- a/ticho-trace-server/pom.xml
+++ b/ticho-trace-server/pom.xml
@@ -13,36 +13,27 @@
         <dependency>
             <groupId>com.ticho.boot</groupId>
             <artifactId>ticho-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.elasticsearch.client</groupId>
-                    <artifactId>elasticsearch-rest-client</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/cn.easy-es/easy-es-boot-starter -->
-        <dependency>
-            <groupId>cn.easy-es</groupId>
-            <artifactId>easy-es-boot-starter</artifactId>
-            <version>1.1.1</version>
         </dependency>
 
         <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>7.14.0</version>
+            <groupId>com.ticho.boot</groupId>
+            <artifactId>ticho-starter-es</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>7.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.14.0</version>
+        </dependency>
 
         <dependency>
-            <groupId>com.ticho.trace</groupId>
-            <artifactId>ticho-trace-common</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>com.ticho.boot</groupId>
+            <artifactId>ticho-starter-log</artifactId>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
