管理员初始化接口添加、security-starter添加

--- a/ticho-trace-server/src/main/resources/application.yaml
+++ b/ticho-trace-server/src/main/resources/application.yaml
@@ -33,3 +33,5 @@ ticho:
     print: true
   swagger:
     enable: true
+  security:
+    ant-patterns: [ "/doc.html", "/swagger-resources/**", "/webjars/**", "/v2/api-docs","/favicon.ico", "/health", "/oauth/**"]
