--- a/ticho-trace-server/pom.xml
+++ b/ticho-trace-server/pom.xml
@@ -42,9 +42,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.ticho.boot</groupId>
+            <artifactId>ticho-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot-starter</artifactId>
-            <version>3.0.5</version>
         </dependency>
 
         <dependency>
