--- a/ticho-trace-server/src/main/resources/application.yaml
+++ b/ticho-trace-server/src/main/resources/application.yaml
@@ -31,7 +31,8 @@ ticho:
     trace: '[${traceId}].[${spanId}]'
   log:
     print: true
+    ant-patterns: ["/swagger-resources/**", "/health"]
   swagger:
     enable: true
   security:
-    ant-patterns: [ "/doc.html", "/swagger-resources/**", "/webjars/**", "/v2/api-docs","/favicon.ico", "/health", "/oauth/**"]
+    ant-patterns: [ "/doc.html", "/swagger-resources/**", "/webjars/**", "/v2/api-docs","/favicon.ico", "/health", "/oauth/token", "/oauth/refreshToken", "/oauth/publicKey"]
