接口添加权限、jwt添加状态字段、系统信息和用户信息CRUD优化

--- a/ticho-trace-server/pom.xml
+++ b/ticho-trace-server/pom.xml
@@ -60,7 +60,10 @@
             <artifactId>mapstruct-processor</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
 
     </dependencies>
 
