trace-client测试配置修改

--- a/ticho-trace-client/src/main/resources/application.yaml
+++ b/ticho-trace-client/src/main/resources/application.yaml
@@ -20,6 +20,8 @@ ticho:
     order: -1000
     pushLog: true
     pushTrace: true
+    secret: 1651402954198106112
+    ant-patterns: ["/health"]
   log:
     print: true
     order: -100
