--- a/ticho-trace-server/src/main/resources/application.yaml
+++ b/ticho-trace-server/src/main/resources/application.yaml
@@ -28,7 +28,7 @@ logging:
 
 ticho:
   trace:
-    trace: '[${traceId}].[${spanId}]'
+    trace: '[${traceId}]'
   log:
     print: true
     ant-patterns: ["/swagger-resources/**", "/health"]
