--- a/ticho-trace-server/pom.xml
+++ b/ticho-trace-server/pom.xml
@@ -7,6 +7,13 @@
     <artifactId>ticho-trace-server</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
 
