k8s pod镜像名称修改

--- a/ticho-trace-server/deploy/k8s-dev.yaml
+++ b/ticho-trace-server/deploy/k8s-dev.yaml
@@ -52,7 +52,7 @@ spec:
       containers:
         - name: ticho-trace-dev
           # 设置Docker镜像（同Jenkinsfile脚本中的环境变量）
-          image: $REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE-$PROFILE
+          image: $REGISTRY/$DOCKERHUB_NAMESPACE/ticho-trace-server-$PROFILE
           imagePullPolicy: Always
           # 资源限制
           resources:
