Dockerfile添加环境变量ENC_PASSWORD

--- a/ticho-trace-server/deploy/Dockerfile
+++ b/ticho-trace-server/deploy/Dockerfile
@@ -1,4 +1,5 @@
 FROM java:8u92-jre-alpine
 VOLUME /tmp
+ENV ENC_PASSWORD=""
 COPY target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "-Djasypt.encryptor.password=$ENC_PASSWORD", "/app.jar"]
