--- a/ticho-trace-client/src/main/resources/application.yaml
+++ b/ticho-trace-client/src/main/resources/application.yaml
@@ -5,23 +5,7 @@ spring:
   application:
     name: ticho-trace-client
   profiles:
-    active: local
+    active: remote
 
 logging:
   config: classpath:logback-spring.xml
-
-ticho:
-  swagger:
-    enable: true
-  trace:
-    enable: true
-    url: http://127.0.0.1:8000/trace/collect
-    logUrl: http://127.0.0.1:8000/log/collect
-    order: -1000
-    pushLog: true
-    pushTrace: true
-    secret: ezppHzmce7FhRDVefX141JXO5x7fF2kmWzzaWZtqXUY=
-    ant-patterns: [ "/doc.html", "/swagger-resources/**", "/webjars/**", "/v2/api-docs","/favicon.ico", "/health" ]
-  log:
-    print: true
-    order: -100
