web框架初始化20%

--- a/ticho-trace-server/src/main/resources/application.yaml
+++ b/ticho-trace-server/src/main/resources/application.yaml
@@ -38,3 +38,5 @@ ticho:
     enable: true
   security:
     ant-patterns: [ "/doc.html", "/swagger-resources/**", "/webjars/**", "/v2/api-docs","/favicon.ico", "/health", "/oauth/token", "/oauth/refreshToken", "/oauth/publicKey"]
+  cors:
+    enable: true
