ticho-trace-server: 添加批量删除用户接口

--- a/ticho-trace-server/src/main/resources/application.yaml
+++ b/ticho-trace-server/src/main/resources/application.yaml
@@ -19,6 +19,8 @@ easy-es:
   socket-timeout: 60000
   global-config:
     print-dsl: false
+    db-config:
+      refresh-policy: wait_until
 
 jasypt:
   encryptor:
