xxljob、rabbitmq、scheduled通过aop进行链路处理

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,24 @@
                 <version>3.4.4</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>1.9.7</version>
+            </dependency>
+
+            <!-- 定时任务 -->
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>2.3.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.amqp</groupId>
+                <artifactId>spring-rabbit</artifactId>
+                <version>2.4.2</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
