--- a/ticho-trace-server/pom.xml
+++ b/ticho-trace-server/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
+        <!-- 引入aop支持 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
