--- a/ticho-trace-server/pom.xml
+++ b/ticho-trace-server/pom.xml
@@ -72,11 +72,11 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
-        <!-- 引入aop支持 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
+<!--        &lt;!&ndash; 引入aop支持 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-aop</artifactId>-->
+<!--        </dependency>-->
 
 
     </dependencies>
